# qscanner

./: README.md  ROADMAP.md  debug_full_text.txt  pyproject.toml  requirements.txt
src/qscanner/: analyzer.py  main.py  sec_client.py  utils.py
src/qscanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: debug_extraction.py  list_models.py  test_extraction.py
